testing/stage_12/invalid/bad_char_decl.c
int main()
{
	char ='h''
	return 0;
}